--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,1 +1,7 @@
-pytest==6.2.5
+# Development dependencies
+black==23.3.0
+flake8==6.0.0
+mypy==1.3.0
+pytest==7.3.1
+pytest-cov==4.1.0
+pre-commit==3.3.2
